--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,19 @@ body {
   left: 10px;
 }
 
+.login-container {
+  width: 200px; 
+  height: 200px; 
+  padding: 30px;
+  border-radius: px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: absolute; 
+  top: 350px; 
+  left: 78px; 
+
+}
+
 .seccion-navegacion input{
   border: none;
   outline: none;
