--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,28 @@ body {
 }
 
 
+/* Estilos de pagina de prendido */
+img {
+  position: absolute; 
+  top: 20%; 
+  left: 20%; 
+  width: 200px;
+  height: auto;
+  transform: translate(-50%, -50%); /* Opcional: centra respecto a su punto */
+}
+
+
+.cargando {
+  position: absolute;
+  top: 100%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 22px;
+}
+
+
+
 .barra-tareas {
   display: flex;
   justify-content: space-between;
