--- a/styles_menus.css
+++ b/styles_menus.css
@@ -279,8 +279,10 @@
 }
 
 .rating {
+  --c:gold;
   position: relative;
   display: flex;
+  flex-direction: row-reverse;
   padding: 15px 20px;
   border: 3px solid #111;
   gap: 4px;  
@@ -320,9 +322,12 @@
   transition: .5s;
 }
 
-
-
-
+.rating input:hover ~ input::before,
+.rating input:hover::before,
+.rating input:checked ~ input::before,
+.rating input:checked::before {
+  color: var(--c);
+}
 
 #btn-cam-aceptar{
   background-color: rgb(14, 92, 31);
