--- a/styles_menus.css
+++ b/styles_menus.css
@@ -174,6 +174,7 @@
 .menu-cam-timer{
   display: none;
 }
+
 .menu-cam-timer-contenedor{
   display: none;
   padding: 10px;
@@ -335,10 +336,11 @@
 .valoracion-estrellas {
   position: absolute;
   top: 510px;
-  left: 709px;
+  left: 705px;
   color: #fff;
   font-size: 16px;  
   font-family: Arial, sans-serif;
+  font-weight: bold;
   text-align: center;
 }
 
