--- a/styles_menus.css
+++ b/styles_menus.css
@@ -371,23 +371,34 @@
   position: absolute;
   top:300px;
   right: 0;
-  width: 240px;
-  height: 100px;
-  background-color: rgb(65, 64, 64);
+  width: 190px;
+  height: 40px;
+  background: #353535;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction:  column;
   border-radius: 20px;
-  padding: 20px;
+  padding: 20px; 
 }
 
 .btn {
-  background-color: rgb (255,149,0);
-  width: 70px;
-  height: 30px;
+  background-color: rgb(255,149,0);
+  width: 60px;
+  height: 20px;
   border:0;
-  border-radius: 8px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgb(227,100,3);
+}
+
+.date-display {
+  color: white;
+  font-size: 40px;
+  font-family: Verdana, Geneva, Tahoma,  sans-serif;
 }
 
 
