--- a/styles_menus.css
+++ b/styles_menus.css
@@ -374,6 +374,7 @@
   width: 190px;
   height: 40px;
   background: #353535;
+  border: 3px solid #111;
   display: flex;
   align-items: center;
   justify-content: center;
